--- a/app/auth/login.html
+++ b/app/auth/login.html
@@ -4,16 +4,12 @@
     <h1><a ui-sref="home"><img class="logo-img" src="images/logo.png" /></a> Log In</h1>
   </div>
 
-<div>
-  <span>{{ authCtrl.error.message }}</span>
-</div>
-
-  <form ng-submit="authCtrl.login()">
+  <form>
     <div class="input-group">
-      <input type="email" class="form-control" placeholder="Email" ng-model="authCtrl.user.email">
+      <input type="email" class="form-control" placeholder="Email">
     </div>
     <div class="input-group">
-      <input type="password" class="form-control" placeholder="Password" ng-model="authCtrl.user.password">
+      <input type="password" class="form-control" placeholder="Password">
     </div>
     <input type="submit" class="btn btn-default" value="Log In">
   </form>
